live/staging/middleware/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-gw-reverse-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /userservice(/|$)(.*)
        backend:
          serviceName: userservice-service
          servicePort: 8080
      - path: /customerservice(/|$)(.*)
        backend:
          serviceName: customerservice-service
          servicePort: 8081
      - path: /orderservice(/|$)(.*)
        backend:
          serviceName: orderservice-service
          servicePort: 8082
      - path: /productservice(/|$)(.*)
        backend:
          serviceName: productservice-service
          servicePort: 8083
